# ChangeLog for dev-lang/ruby
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.643 2014/03/06 06:33:07 graaff Exp $

*ruby-2.1.1 (06 Mar 2014)

  06 Mar 2014; Hans de Graaff <graaff@gentoo.org> +ruby-2.1.1.ebuild:
  Version bump. Update module selection code to fix automagic dependencies.
  Remove USE=tk for bug 500894. Backport fix for readline 6.3 breakage, bug
  503106.

*ruby-2.0.0_p451 (05 Mar 2014)

  05 Mar 2014; Hans de Graaff <graaff@gentoo.org> +ruby-2.0.0_p451.ebuild:
  Version bump. Update module selection code to fix automagic dependencies.
  Remove USE=tk for bug 500894. Backport fix for readline 6.3 breakage, bug
  503106.

*ruby-1.9.3_p545 (26 Feb 2014)

  26 Feb 2014; Hans de Graaff <graaff@gentoo.org> +ruby-1.9.3_p545.ebuild:
  Version bump. Drop tk USE flag due to bug 500894.

*ruby-2.0.0_p353-r2 (23 Feb 2014)

  23 Feb 2014; Hans de Graaff <graaff@gentoo.org> +ruby-2.0.0_p353-r2.ebuild:
  Backport support for uclibc, fixing bug 484534.

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> ruby-2.0.0_p353.ebuild:
  Stable for alpha, wrt bug #483254

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> ruby-2.0.0_p353.ebuild:
  Stable for sparc, wrt bug #483254

  26 Jan 2014; Justin Lecher <jlec@gentoo.org> ruby-1.9.3_p484.ebuild,
  ruby-2.0.0_p353-r1.ebuild, ruby-2.1.0.ebuild, metadata.xml:
  Fix slot conflicts, #498970

  22 Jan 2014; Hans de Graaff <graaff@gentoo.org> ruby-1.9.3_p484.ebuild,
  ruby-2.0.0_p353-r1.ebuild, ruby-2.1.0.ebuild:
  Ruby does not support tcl/tk 8.6 so adjust tk dependency accordingly. "Fixes"
  bug 497130.

  05 Jan 2014; Hans de Graaff <graaff@gentoo.org> -ruby-1.9.3_p448.ebuild,
  -ruby-1.9.3_p448-r1.ebuild:
  Remove vulnerable versions.

  05 Jan 2014; Hans de Graaff <graaff@gentoo.org> -ruby-2.0.0_p247.ebuild,
  -ruby-2.0.0_p247-r1.ebuild, -ruby-2.0.0_p247-r2.ebuild:
  Remove vulnerable versions.
